fixed hire me spacings

--- a/src/hire/Hire.css
+++ b/src/hire/Hire.css
@@ -78,3 +78,13 @@
     width: 660px;
 }
 
+.form-title-space {
+    height: 110px;
+}
+
+@media only screen and (min-width: 768px) {
+    .form-title-space {
+        height: 110px;
+    }
+}
+
